# roborean

./: .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  distlift.toml  e2e-ai.yml  package.json  pip.ini  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.github/: PAGES.md
.github/workflows/: openapi.yml  platform.yml  publish.yml  static.yml  tests.yml
.playwright-cli/: page-2026-07-19T10-26-13-644Z.yml  page-2026-07-19T10-27-41-353Z.yml  page-2026-07-19T10-28-07-519Z.yml  page-2026-07-19T10-28-44-036Z.yml  page-2026-07-19T10-29-00-574Z.yml  page-2026-07-19T10-29-16-313Z.yml  page-2026-07-19T10-29-33-268Z.yml  page-2026-07-19T10-29-55-348Z.yml
apps/api/: README.md  pyproject.toml
apps/api/src/roborean_api_app/: __init__.py  main.py
apps/cli-diagnostics/: README.md
apps/web/: .env.example  README.md  index.html  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
conformance/: README.md
conformance/idempotency/: 01_duplicate_key.json  02_key_payload_conflict.json
conformance/patches/: reject_const_and_undeclared.json  set_and_unset.json
conformance/projects/: 01_minimal.json  03_conditional.json  04_secret_ref.json  05_invalid_undeclared_write.json  06_const_rejection.json  (+1 more)
schemas/: DOCUMENT_SEMANTICS.md  PROJECT_FORMAT.md  RULE_SEMANTICS.md  RUN_ARTIFACTS.md  RUN_PERSISTENCE.md  bit-type-manifest.schema.json  bit.schema.json  compiled-project.schema.json  document-definition.schema.json  document-driver-manifest.schema.json  document-operation.schema.json  document-preview.schema.json  preview.schema.json  project-lock.schema.json  project-package.schema.json  project.schema.json  recipe.schema.json  rule-ast.schema.json  run-diff.schema.json  run-record.schema.json  run-request.schema.json  run-results.schema.json  secret-ref.schema.json  template-manifest.schema.json  variable.schema.json  workspace-patch.schema.json  workspace-value.schema.json  workspace.schema.json
tools/: check_openapi_drift.py  check_schema_sync.py  compare_artifacts.py  compare_dryrun_parity.py  export_openapi.py  gen_fixture_index.py  install_e2e_ai.py  run_conformance.py  run_document_conformance.py  run_runtime_conformance.py  schema_bindings.py
(+143 files in other folders)
