[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roborean-workspace"
version = "0.1.0"
description = "Roborean Python workspace"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
  "packages/python/roborean_spec",
  "packages/python/roborean_engine",
]

[tool.pytest.ini_options]
testpaths = [
  "packages/python/roborean_spec/tests",
  "packages/python/roborean_engine/tests",
]

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80

[tool.flake8]
max-line-length = 80
