# Workspace root only — not an installable package.

[project]
name = "roborean-workspace"
version = "0.3.0"
description = "Roborean Python workspace"
requires-python = ">=3.11"

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "packages/python/roborean_spec",
  "packages/python/roborean_engine",
  "packages/python/roborean_storage_base",
  "packages/python/roborean_storage_dict",
  "packages/python/roborean_storage_sqlalchemy",
  "packages/python/roborean_plugins_base",
  "packages/python/roborean_documents_base",
  "packages/python/roborean_documents_text",
  "packages/python/roborean_documents_markdown",
  "packages/python/roborean_documents_xlsx",
  "packages/python/roborean_documents_docx",
  "packages/python/roborean_documents_image",
  "packages/python/roborean_documents_dxf",
  "packages/python/roborean_api_fastapi",
]

[tool.pytest.ini_options]
testpaths = [
  "packages/python",
]
markers = [
  "integration: storage or cross-package integration tests",
]

[tool.black]
line-length = 80
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 80

[tool.flake8]
max-line-length = 80
