[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roborean-api-app"
version = "0.4.0"
description = "Runnable ASGI entry for the Roborean API"
requires-python = ">=3.11"
dependencies = [
  "roborean-api-fastapi>=0.1.1",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
roborean-api = "roborean_api_app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/roborean_api_app"]
